crates/dsl-core/tests/snapshots/ast_golden__ast_attribute_update_internal.snap
---
source: crates/dsl-core/tests/ast_golden.rs
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "attribute",
                verb: "update-internal",
                arguments: [
                    Argument {
                        key: "id",
                        value: Literal(
                            String(
                                "attr.system.last_sync",
                            ),
                            Span {
                                start: 31,
                                end: 54,
                            },
                        ),
                        span: Span {
                            start: 27,
                            end: 54,
                        },
                    },
                    Argument {
                        key: "field",
                        value: Literal(
                            String(
                                "description",
                            ),
                            Span {
                                start: 62,
                                end: 75,
                            },
                        ),
                        span: Span {
                            start: 55,
                            end: 75,
                        },
                    },
                    Argument {
                        key: "value",
                        value: Literal(
                            String(
                                "Timestamp of last external sync",
                            ),
                            Span {
                                start: 83,
                                end: 116,
                            },
                        ),
                        span: Span {
                            start: 76,
                            end: 116,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 0,
                    end: 117,
                },
            },
        ),
    ],
}
