crates/dsl-core/tests/snapshots/ast_golden__ast_cbu_create.snap
---
source: crates/dsl-core/tests/ast_golden.rs
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "cbu",
                verb: "create",
                arguments: [
                    Argument {
                        key: "name",
                        value: Literal(
                            String(
                                "Allianz Global Investors",
                            ),
                            Span {
                                start: 18,
                                end: 44,
                            },
                        ),
                        span: Span {
                            start: 12,
                            end: 44,
                        },
                    },
                    Argument {
                        key: "jurisdiction",
                        value: Literal(
                            String(
                                "LU",
                            ),
                            Span {
                                start: 59,
                                end: 63,
                            },
                        ),
                        span: Span {
                            start: 45,
                            end: 63,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 0,
                    end: 64,
                },
            },
        ),
    ],
}
