crates/dsl-core/tests/snapshots/ast_golden__ast_cbu_update_status.snap
---
source: crates/dsl-core/tests/ast_golden.rs
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "cbu",
                verb: "update-status",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 27,
                                end: 31,
                            },
                        },
                        span: Span {
                            start: 19,
                            end: 31,
                        },
                    },
                    Argument {
                        key: "status",
                        value: Literal(
                            String(
                                "active",
                            ),
                            Span {
                                start: 40,
                                end: 48,
                            },
                        ),
                        span: Span {
                            start: 32,
                            end: 48,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 0,
                    end: 49,
                },
            },
        ),
    ],
}
